src/BootstrapBlazor/Components/Table/Table.css
/* ... */
.table-striped > tbody > tr.is-master:nth-of-type(odd) {
    --bs-table-accent-bg: #fff;
}

    .table-striped > tbody > tr.is-master:nth-of-type(odd).active {
        --bs-table-accent-bg: var(--bb-table-selected-bg);
    }

.table-striped > tbody > tr.is-master:nth-of-type(4n+1) {
    --bs-table-accent-bg: var(--bs-table-striped-bg);
    color: var(--bs-table-striped-color);
}

.table-wrapper .empty-text {
    padding: 1rem;
}

form .table .table-cell > .form-label {
    display: none;
}

form .table .table-cell > textarea {
    width: 100%;
}

.table-search {
    margin-bottom: .5rem;
}

    .table-search .card-header {
        padding: 0;
    }

        .table-search .card-header .table-search-title {
            padding: .5rem 1rem;
            flex: 1;
        }

        .table-search .card-header .table-search-buttons {
            padding: .25rem 1rem;
        }

            .table-search .card-header .table-search-buttons .btn {
                padding: .275rem .5rem;
            }

    .table-search .table-search-collapse {
        padding: .5rem 0 .5rem 1rem;
    }

    .table-search .table-search-arrow {
        cursor: pointer;
        transition: .3s transform linear;
        transform: rotate(0);
    }

    .table-search .is-open .table-search-arrow {
        transform: rotate(90deg);
    }

    .table-search .collapsed .card-header {
        border-bottom-color: transparent;
    }

    .table-search .card-header .input-group,
    .table-search .collapsed .input-group + .table-search-buttons {
        display: none;
    }

    .table-search .card-header .input-group {
        width: auto;
        padding: 2px;
    }

        .table-search .card-header .input-group .table-toolbar-search,
        .table-search .card-header .input-group .btn {
            height: 34px;
        }

    .table-search .collapsed .input-group {
        display: flex;
    }

.table-excel-toolbar {
    display: none;
    position: absolute;
}

.table-excel.table > :not(caption):not(thead) > * > * {
    padding: 0;
}

.table-excel tbody .table-cell > .form-check {
    padding: 6px 8px;
}

.table-excel tbody .table-cell .switch {
    padding: .375rem .1875rem;
    justify-content: center;
}

.table-excel .form-control,
.table-excel .table-cell .select .form-select {
    border: none;
    border-radius: 0;
    padding: .375rem .1875rem;
}

.table-excel .table-cell .select {
    width: 100%;
}

.table-excel .table-cell > .disabled {
    background-color: var(--bs-bg-disabled);
    width: 100%;
    padding: .375rem .1875rem;
}

.table-excel .datetime-picker-input {
    padding-left: 2rem;
}

.table-excel .datetime-picker-input-icon {
    line-height: 32px;
}

.table-excel.table tbody tr.active {
    background-color: transparent;
}

.table-cell.text-center,
.table-cell.text-center .switch {
    justify-content: center;
}

    .table-cell.text-center input {
        text-align: center;
    }

.table-cell.text-end,
.table-cell.text-end .switch {
    justify-content: end;
}

    .table-cell.text-end input {
        text-align: right;
    }

.table-cell > .progress {
    flex: 1;
}

.table-cell.is-ph {
    height: 12.5px;
    background-color: #e9ecef;
    border-radius: var(--bs-border-radius);
    margin: 5px 0;
}

